Add Kanban Board HTML structure and styling

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -90,6 +90,18 @@
             box-shadow: 0 4px 12px rgba(245, 158, 11, 0.25);
         }
 
+        .header-btn.kanban-btn {
+            background: linear-gradient(135deg, rgba(168, 85, 247, 0.3), rgba(168, 85, 247, 0.2));
+            color: #c084fc;
+            border: 1px solid rgba(168, 85, 247, 0.4);
+            box-shadow: 0 2px 8px rgba(168, 85, 247, 0.15);
+        }
+
+        .header-btn.kanban-btn:hover {
+            background: linear-gradient(135deg, rgba(168, 85, 247, 0.4), rgba(168, 85, 247, 0.3));
+            box-shadow: 0 4px 12px rgba(168, 85, 247, 0.25);
+        }
+
         .services-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -1195,6 +1207,7 @@
                 <a href="/workplace.html" class="header-btn workplace-btn">&#128188; Workplace</a>
                 <a href="/data-validation.html" class="header-btn">&#128202; Daten-Validierung</a>
                 <a href="/testing.html" class="header-btn">&#128295; Test Suite</a>
+                <a href="/kanban.html" class="header-btn kanban-btn">&#128203; Kanban</a>
                 <span id="last-update">Update: -</span>
             </div>
         </div>
