feat(ui): standardize header layout across service pages for improved consistency

--- a/docker/services/frontend/html/data-validation.html
+++ b/docker/services/frontend/html/data-validation.html
@@ -794,11 +794,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="/" class="back-link">&#8592; Dashboard</a>
             <h1>&#128202; Daten-Validierung</h1>
-            <div class="header-actions">
-                <a href="/" class="back-link">&#8592; Dashboard</a>
-            </div>
+            <div class="header-actions"></div>
         </div>
     </header>
 
