--- a/docker/services/frontend/html/service-candlestick.html
+++ b/docker/services/frontend/html/service-candlestick.html
@@ -333,16 +333,14 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="index.html" class="back-link">← Zurück zum Dashboard</a>
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="index.html" class="back-link">← Dashboard</a>
+            <h1>Candlestick Pattern Service</h1>
             <span class="service-badge" id="serviceStatus">Laden...</span>
         </div>
     </header>
 
     <div class="container">
-        <h1>
-            Candlestick Pattern Service
-        </h1>
         <p class="subtitle">Automatische Erkennung von Candlestick-Mustern in Echtzeit</p>
 
         <!-- Übersicht -->
