--- a/docker/services/frontend/html/service-easyinsight.html
+++ b/docker/services/frontend/html/service-easyinsight.html
@@ -261,8 +261,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="/" class="back-link">&#8592; Zurück zum Dashboard</a>
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="/" class="back-link">&#8592; Dashboard</a>
+            <h1>EasyInsight API</h1>
             <div>
                 <span class="service-badge">Externer Service</span>
                 <span class="service-badge new">API v2.0</span>
@@ -271,7 +272,6 @@
     </header>
 
     <div class="container">
-        <h1>EasyInsight API</h1>
         <p class="subtitle">TwelveData-kompatible API für OHLCV-Marktdaten und technische Indikatoren</p>
 
         <div class="content-card">
