--- a/docker/services/frontend/html/config-workplace.html
+++ b/docker/services/frontend/html/config-workplace.html
@@ -333,11 +333,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="header-left">
-                <a href="workplace.html" class="back-link">← Zurück zum Workplace</a>
-                <h1>Konfiguration</h1>
-            </div>
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="workplace.html" class="back-link">← Workplace</a>
+            <h1>Workplace Konfiguration</h1>
+            <div class="header-actions"></div>
         </div>
     </header>
 
