--- a/docker/services/frontend/html/kanban.html
+++ b/docker/services/frontend/html/kanban.html
@@ -671,11 +671,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="/" class="back-link">&#8592; Dashboard</a>
             <h1>&#128203; Kanban Board</h1>
-            <div class="header-actions">
-                <a href="/" class="back-link">&#8592; Dashboard</a>
-            </div>
+            <div class="header-actions"></div>
         </div>
     </header>
 
@@ -873,8 +872,8 @@
             { value: 'redis', label: 'Redis Cache' },
             { value: 'tcn', label: 'TCN-Pattern Service' },
             { value: 'tcn-train', label: 'TCN-Train Service' },
-            { value: 'workplace', label: 'Trading Workplace' },
-            { value: 'watchdog', label: 'Watchdog Service' }
+            { value: 'watchdog', label: 'Watchdog Service' },
+            { value: 'workplace', label: 'Workplace Service' }
         ];
 
         // Default columns
