--- a/docker/services/frontend/html/testing.html
+++ b/docker/services/frontend/html/testing.html
@@ -829,11 +829,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <a href="/index.html" class="back-link">&#8592; Dashboard</a>
             <h1>&#128203; Test Suite</h1>
-            <div class="header-actions">
-                <a href="/index.html" class="back-link">&#8592; Dashboard</a>
-            </div>
+            <div class="header-actions"></div>
         </div>
     </header>
 
